# cmake-jni-example

./: CMakeLists.txt  README.md  boo.cpp  foo.java
